# em_environment

./: .gitignore  Agent.md  LICENSE  README.md  pyproject.toml  requirements.txt  start_visualizer.bat  start_visualizer.sh  temp_config_backup.txt  test_visualizer.py
doc/: EM_env_service_code_framework.md  EM_env_service_spec.json  EM_env_service_spec.md  code_iteration.md  visualization_guide.md  visualization_summary.md  电磁态势代码框架.md  计算流程和算法说明.md  输入字段说明.md  输入格式示意.json  输出字段说明.md  运行和调用说明.md
emenv/: __init__.py  antenna.py  api_models.py  bands.py  combine.py  config.py  engine.py  geo.py  grid.py  io_raster.py  propagation.py  service.py  utils.py
emenv/app/: __init__.py  cli.py  rest.py  visualizer.py  visualizer_launcher.py
emenv/tests/: __init__.py  test_antenna.py  test_app.py  test_engine.py  test_geo.py  test_propagation.py
examples/: input_spec.json  request_basic_free_space.json  request_comm_and_jammer.json  request_highland_complex.json  request_maritime_network.json  request_mega_urban.json  request_multi_band_dense.json  request_two_ray.json  request_wide_area.json  run_local.md
web-visualizer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-visualizer/src/: App.vue  main.ts  router.ts
web-visualizer/src/stores/: index.ts
web-visualizer/src/views/: Home.vue  Map.vue
