[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emenv"
version = "0.1.0"
description = "Electromagnetic environment estimation service skeleton."
authors = [{ name = "EM Environment Team" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pydantic>=1.10,<2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.24",
    "rasterio>=1.3",
    "pyarrow>=16.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["emenv/tests"]
